--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -1,5 +1,12 @@
 FROM python:2.7
 ENV PYTHONUNBUFFERED 1
+
+RUN apt-get update && apt-get install -y wget
+
+ENV DOCKERIZE_VERSION v0.2.0
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+
 RUN mkdir /code
 WORKDIR /code
 ADD requirements.txt /code/
