--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -4,6 +4,6 @@ djangorestframework
 django-rest-auth
 mysql-python
 django-debug-toolbar
-drf-nested-routers=0.11.1
+drf-nested-routers
 django-rest-assured
 factory_boy
