--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,7 @@ services:
         ports:
             - "3307:3306"
         environment:
-          MYSQL_ROOT_PASSWORD: root
-        #   MYSQL_DATABASE: hosting_panel
-        #   MYSQL_USER: hosting_panel
-        #   MYSQL_PASSWORD: hosting_panel
+            MYSQL_ROOT_PASSWORD: root
         volumes:
             - "./.data/db:/var/lib/mysql"
         #volumes:
@@ -26,7 +23,7 @@ services:
         links:
           - db:db
         ports:
-          - "5353"
+          - "5353:53"
         environment:
             - PDNS_ALLOW_AXFR_IPS=127.0.0.1
             - PDNS_DISTRIBUTOR_THREADS=3
@@ -45,3 +42,4 @@ services:
           - pdns
         links:
           - db:db
+        entrypoint: dockerize -wait tcp://db:3306
